--- a/ui-library/scss/main.scss
+++ b/ui-library/scss/main.scss
@@ -64,10 +64,8 @@ header {
   width: 100%;
 
   div.masthead {
-    div.logos {
-      align-items: center;
-      display: flex;
-    }
+    align-items: center;
+    display: flex;
   }
 
   nav {
